# Cross-Chain-Message-Verifier-XCM-Lite-

./: .gitignore  Build Plan.md  Cargo.toml  README.md
src/: config.rs  crypto.rs  lib.rs  main.rs  state.rs
src/api/: mod.rs
src/domain/: errors.rs  message.rs  mod.rs
src/execution/: mod.rs
src/processor/: mod.rs
