[package]
name = "xcm-lite"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parity-scale-codec = { version = "3", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["std"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
config = "0.14"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4", features = ["axum"] }
thiserror = "1"
hex = "0.4"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
